9.3.1.1
- Improved the check for an expansion being enabled or not
- Improved Notifier Placeholder handler (shouldn't cause any more errors due to missing class files)
- Minor fixes for Lands expansion
- Minor fixes for WorldGuard Compatibility mob-combat tag checking